--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<!-- Windows Phone -->
 		<meta content='#1565c0' name='msapplication-navbutton-color'/>
 		
-		<link rel="stylesheet" href="style/style.css" />
+		<link rel="stylesheet" href="style.css" />
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.4/clipboard.min.js"></script>
 	</head>
